--- a/back-end/package.json
+++ b/back-end/package.json
@@ -50,7 +50,10 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-knex": "^7.1.1",
     "helmet": "^4.4.1",
+    "knex": "^0.21.17",
+    "mysql2": "^2.2.5",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
@@ -60,8 +63,8 @@
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/serve-favicon": "^2.5.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "axios": "^0.21.1",
     "eslint": "^7.19.0",
     "jest": "^26.6.3",
