--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,6 @@
 {
   "name": "back-end",
-  "description": "Middagsdeling back-end",
+  "description": "",
   "version": "0.0.0",
   "homepage": "",
   "private": true,
@@ -69,8 +69,8 @@
     "eslint": "^7.19.0",
     "jest": "^26.6.3",
     "shx": "^0.3.3",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.5"
   }
 }
