--- a/back-end/package.json
+++ b/back-end/package.json
@@ -50,6 +50,7 @@
     "@feathersjs/transport-commons": "^4.5.11",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "feathers-knex": "^7.1.1",
     "helmet": "^4.4.1",
     "knex": "^0.21.17",
