--- a/client/middagsdeling_app/package.json
+++ b/client/middagsdeling_app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@feathersjs/feathers": "^4.5.11",
+    "@feathersjs/socketio-client": "^4.5.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -10,13 +12,13 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.1.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^14.14.30",
     "@types/react-router-dom": "^5.1.7"
   }
 }
