--- a/client/middagsdeling_app/package.json
+++ b/client/middagsdeling_app/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@feathersjs/feathers": "^4.5.11",
-    "@feathersjs/socketio-client": "^4.5.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -14,6 +13,8 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "feathers-authentication": "^1.3.1",
+    "feathers-authentication-client": "^0.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -47,7 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@feathersjs/socketio-client": "github:feathersjs/socketio-client",
     "@types/node": "^14.14.30",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "feathers-socketio": "^2.0.1"
   }
 }
