--- a/client/middagsdeling_app/package.json
+++ b/client/middagsdeling_app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@feathersjs/client": "^3.4.4",
     "@feathersjs/feathers": "^4.5.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
