--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "socket.io-client": "^1.7.3",
     "web-vitals": "^1.1.0"
