--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@feathersjs/authentication-client": "^4.5.11",
-    "@feathersjs/client": "^3.7.8",
     "@feathersjs/feathers": "^4.5.11",
     "@feathersjs/rest-client": "^4.5.11",
+    "@feathersjs/socketio-client": "^4.5.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "socket.io-client": "^3.1.1",
+    "socket.io-client": "^2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
