--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "socket.io-client": "^2",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
