--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,9 +16,11 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^17.0.1",
     "moment": "^2.17.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
