--- a/back-end/package.json
+++ b/back-end/package.json
@@ -51,6 +51,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "feathers-hooks-common": "^5.0.5",
     "feathers-knex": "^7.1.1",
     "helmet": "^4.4.1",
     "knex": "^0.21.17",
